--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# Logs
 logs
 *.log
 npm-debug.log*
@@ -6,13 +5,12 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
 node_modules
 dist
 dist-ssr
 *.local
-
-# Editor directories and files
+**/*Config.js*
+*Config*
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -22,9 +20,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
-
-#My 
-
-**/*Config.js*
-
